--- a/.repository-maintenance/package.json
+++ b/.repository-maintenance/package.json
@@ -9,6 +9,7 @@
     "clean": "node ./scripts/clean.js",
     "install-local": "node ./scripts/install-local.js",
     "install-jfrog": "node ./scripts/install-jfrog.js",
+    "server-start-stop": "node ./scripts/server-start-stop.js",
     "build": "node ./scripts/build.js"
   },
   "dependencies": {
