--- a/opentelemetry/otel-custom-logs-processor/package.json
+++ b/opentelemetry/otel-custom-logs-processor/package.json
@@ -15,7 +15,7 @@
     "@opentelemetry/sdk-logs": "^0.54.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
