--- a/opentelemetry/otel-custom-trace-exporter/package.json
+++ b/opentelemetry/otel-custom-trace-exporter/package.json
@@ -14,7 +14,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
