--- a/opentelemetry/otel-custom-trace-processor/package.json
+++ b/opentelemetry/otel-custom-trace-processor/package.json
@@ -15,7 +15,7 @@
     "@opentelemetry/sdk-trace-node": "^1.27.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
