--- a/otel-custom-trace-processor/package.json
+++ b/otel-custom-trace-processor/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "start": "npm run build && node ./dist/index.js",
     "format": "prettier --cache --write .",
     "format-check": "prettier --cache --check ."
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "typescript": "^5.6.3"
   }
 }
