--- a/auth-okta/io-manager-admin-ui/package.json
+++ b/auth-okta/io-manager-admin-ui/package.json
@@ -2,6 +2,7 @@
   "name": "auth-okta-manager-admin-ui",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@interopio/manager-admin-ui": "^2.0.3",
     "@interopio/theme-demo-apps": "^4.1.3",
@@ -9,30 +10,18 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "format": "prettier --cache --write ."
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "^7.1.0",
-    "@types/node": "^20.12.12",
     "@types/react": "^17.0.80",
     "@types/react-dom": "^17.0.25",
-    "prettier": "^3.2.5",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5"
+    "@vitejs/plugin-react": "^4.3.3",
+    "prettier": "^3.3.3",
+    "typescript": "~5.6",
+    "vite": "^5.4.9",
+    "vitest": "^2.0.5"
   }
 }
