--- a/auth-okta/io-manager-admin-ui/package.json
+++ b/auth-okta/io-manager-admin-ui/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "^17.0.25",
     "@vitejs/plugin-react": "^4.3.3",
     "prettier": "^3.3.3",
-    "typescript": "~5.6",
+    "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vitest": "^2.0.5"
   }
