--- a/.maintenance/package.json
+++ b/.maintenance/package.json
@@ -9,7 +9,7 @@
     "clean": "node ./scripts/clean.js",
     "install-local": "node ./scripts/install-local.js",
     "install-remote": "node ./scripts/install-remote.js",
-    "server-start-stop": "node ./scripts/server-start-stop.js",
+    "test-examples": "node ./scripts/test-examples.js",
     "local-registry-check": "node ./scripts/local-registry-check.js",
     "build": "node ./scripts/build.js",
     "format-examples": "node ./scripts/format.js"
