--- a/auth-custom-advanced/io-manager-admin-ui/package.json
+++ b/auth-custom-advanced/io-manager-admin-ui/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "auth-okta-manager-admin-ui",
+  "name": "auth-custom-advanced-manager-admin-ui",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "dependencies": {
     "@interopio/manager-admin-ui": "^2.0.3",
     "@interopio/theme-demo-apps": "^4.1.3",
+    "@okta/okta-react": "^6.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
