Update basic deployment

--- a/manager-template/1-basic/kubernetes/_1_environment.yaml
+++ b/manager-template/1-basic/kubernetes/_1_environment.yaml
@@ -5,11 +5,11 @@ metadata:
 data:
   SERVER_NAME: "ioManager"
   SERVER_PORT: "4356"
-  SERVER_TOKEN_SECRET: "mV|GuHok*+as2fg|I0Wy^"  
   API_STORE_TYPE: mongo
   API_STORE_MONGO: mongodb://admin:uUa4nPAxLfWw@server-db-svc:27017/manager?authSource=admin
   API_AUTH_METHOD_BASIC_USERS: "[\"admin:admin\"]"
   API_AUTH_METHOD: basic
+  API_TOKEN_SECRET: <YOUR_SECRET>
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -27,5 +27,4 @@ data:
   REACT_APP_SERVER_BASE: /server
   PUBLIC_URL: http://localhost/admin-ui/
   REACT_APP_BASE: /admin-ui
-  API_AUTH_METHOD_BASIC_USERS: "[\"admin:admin\"]"
-  API_AUTH_METHOD: basic
+  REACT_APP_AUTH: basic
