--- a/manager-template/2-advanced/services/admin/package.json
+++ b/manager-template/2-advanced/services/admin/package.json
@@ -1,49 +1,27 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
+  "name": "admin-template",
+  "version": "0.0.1",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@craco/craco": "^7.1.0",
-    "@interopio/manager-admin-ui": "^2.0.0",
-    "@interopio/theme-demo-apps": "^4.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.25",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@interopio/manager-admin-ui": "^2.0.5",
+    "@interopio/theme-demo-apps": "^4.1.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "prettier --cache --write .",
+    "format-check": "prettier --cache --check ."
   },
   "devDependencies": {
-    "@ag-grid-community/core": "^25.3.0",
-    "@glue42/theme": "^4.0.4"
-  },
-  "homepage": "/admin/"
+    "@types/react": "^17.0.80",
+    "@types/react-dom": "^17.0.25",
+    "@vitejs/plugin-react": "^4.3.3",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "vite": "^6.2.0"
+  }
 }
