--- a/manager-template/2-advanced/services/server/package.json
+++ b/manager-template/2-advanced/services/server/package.json
@@ -1,23 +1,19 @@
 {
   "name": "server-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "build": "tsc -p ./tsconfig.json",
-    "start": "npm run build && node build/index.js"
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node ./dist/index.js",
+    "format": "prettier --cache --write .",
+    "format-check": "prettier --cache --check ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kirilpopov/server-example.git"
-  },
-  "author": "interop.io",
-  "license": "ISC",
   "dependencies": {
-    "@interopio/manager": "^1.4.0"
+    "@interopio/manager": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.8.6",
-    "typescript": "^4.6.2"
+    "prettier": "^3.3.3",
+    "rimraf": "^5.0.10",
+    "typescript": "^5.6.3"
   }
 }
