--- a/manager-template/2-advanced/services/server/tsconfig.json
+++ b/manager-template/2-advanced/services/server/tsconfig.json
@@ -1,22 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "ES2020",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "esModuleInterop": false,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "resolveJsonModule": true,
-        "strict": true,
-        "sourceMap": true,
-        "allowSyntheticDefaultImports": true,
-        "useUnknownInCatchVariables": false,
-        "outDir": "./build"
-    },
-    "include": [
-        "src/index.ts",
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "target": "ESNext",
+    "lib": ["ESNext"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "pretty": true,
+    "strict": true,
+    "strictNullChecks": false,
+    "noImplicitAny": true,
+    "outDir": "build",
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "useUnknownInCatchVariables": false
+  },
+  "include": ["src"]
 }
