Update the manager-template

--- a/environment-variable-configuration/.env
+++ b/environment-variable-configuration/.env
@@ -2,7 +2,7 @@ API_NAME=example
 API_PORT=4356
 API_BASE=api
 ## TODO: Contact us at sales@interop.io to get a license.
-API_LICENSE_KEY=
+API_LICENSE_KEY=<YOUR_LICENSE_KEY_GOES_HERE>
 API_AUTH_METHOD=none
 API_AUTH_EXCLUSIVE_USERS=["admin"]
 API_STORE_TYPE=mongo
