--- a/manager-template/2-advanced/docker-compose.yaml
+++ b/manager-template/2-advanced/docker-compose.yaml
@@ -15,10 +15,10 @@ services:
       - admin
   mongodb:
     container_name: io-manager-mongo
-    image: 'mongo'
+    image: "mongo"
     volumes:
-       - mongodb_data:/data/db
-       - mongodb_config:/data/configdb
+      - mongodb_data:/data/db
+      - mongodb_config:/data/configdb
     environment:
       MONGO_INITDB_ROOT_USERNAME: interop42
       MONGO_INITDB_ROOT_PASSWORD: verysecret
@@ -38,6 +38,7 @@ services:
       API_PORT: "4356"
       API_STORE_MONGO: mongodb://interop42:verysecret@mongodb:27017/g42-home?authSource=admin
       API_TOKEN_SECRET: <YOUR_SECRET>
+      API_LICENSE_KEY: <YOUR_LICENSE_KEY_GOES_HERE>
   admin:
     container_name: io-manager-admin
     image: io-manager-admin
