--- a/manager-template/2-advanced/kubernetes/_3_db.yaml
+++ b/manager-template/2-advanced/kubernetes/_3_db.yaml
@@ -30,18 +30,18 @@ spec:
           persistentVolumeClaim:
             claimName: mongo-pvc
       containers:
-      - name: io-manager-db-container
-        image: mongo
-        args: ["--dbpath","/data/db"]
-        imagePullPolicy: Always
-        envFrom:
-          - configMapRef:
-              name: db-config
-        resources:
-          limits:
-            memory: "512Mi"
-          requests:
-            memory: "256Mi"
-        volumeMounts:
-          - name: db-volume
-            mountPath: "/data/db"
+        - name: io-manager-db-container
+          image: mongo
+          args: ['--dbpath', '/data/db']
+          imagePullPolicy: Always
+          envFrom:
+            - configMapRef:
+                name: db-config
+          resources:
+            limits:
+              memory: '512Mi'
+            requests:
+              memory: '256Mi'
+          volumeMounts:
+            - name: db-volume
+              mountPath: '/data/db'
