--- a/manager-template/2-advanced/.gitignore
+++ b/manager-template/2-advanced/.gitignore
@@ -1,33 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+**/node_modules
+**/.npmrc*
 
-# dependencies
-**/node_modules/**
-/.pnp
-.pnp.js
-.npmrc
+**/.idea
+**/.vscode
 
-# testing
-/coverage
-
-# production
-/build
-
-#logs
-/logs
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-unused/**
-
-config-server.json
-config-ui.json
+dist
+logs
