--- a/manager-template/2-advanced/services/server/package.json
+++ b/manager-template/2-advanced/services/server/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node ./dist/index.js",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node ./build/index.js",
     "format": "prettier --cache --write .",
     "format-check": "prettier --cache --check ."
   },
   "dependencies": {
-    "@interopio/manager": "^1.8.1"
+    "@interopio/manager": "^1.8.2"
   },
   "devDependencies": {
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "rimraf": "^5.0.10",
     "typescript": "^5.6.3"
   }
