Update with latest packages

--- a/manager-template/2-advanced/docker-compose.yaml
+++ b/manager-template/2-advanced/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - admin
   mongodb:
     container_name: io-manager-mongo
-    image: "mongo"
+    image: 'mongo'
     volumes:
       - mongodb_data:/data/db
       - mongodb_config:/data/configdb
