--- a/auth-auth0/io-manager-admin-ui/package.json
+++ b/auth-auth0/io-manager-admin-ui/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "npm run typecheck && vite build",
+    "typecheck": "tsc",
     "preview": "vite preview",
     "format": "prettier --cache --write .",
     "format-check": "prettier --cache --check ."
