Change build to dist

--- a/manager-template/2-advanced/services/server/tsconfig.json
+++ b/manager-template/2-advanced/services/server/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "strictNullChecks": false,
     "noImplicitAny": true,
-    "outDir": "build",
+    "outDir": "dist",
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "useUnknownInCatchVariables": false
