--- a/manager-template/2-advanced/services/admin/Dockerfile.local
+++ b/manager-template/2-advanced/services/admin/Dockerfile.local
@@ -16,7 +16,7 @@ RUN npm run build
 
 FROM nginx
 
-COPY --from=builder /home/node/app/build /usr/share/nginx/html
+COPY --from=builder /home/node/app/dist /usr/share/nginx/html
 
 COPY ./services/admin/default.conf /etc/nginx/conf.d/default.conf
 
