--- a/manager-template/2-advanced/services/server/package.json
+++ b/manager-template/2-advanced/services/server/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node ./build/index.js",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node ./dist/index.js",
     "format": "prettier --cache --write .",
     "format-check": "prettier --cache --check ."
   },
