add API_INTERCEPT_PROCESS_SIGNALS to the docker examples

--- a/docker-images/.env
+++ b/docker-images/.env
@@ -14,6 +14,7 @@ API_AUTH_EXCLUSIVE_USERS=["admin"]
 API_STORE_TYPE=mongo
 API_STORE_MONGO=mongodb://db_user:Password123$@db:27017/io_manager?authSource=admin
 API_TOKEN_SECRET=<YOUR_SECRET>
+API_INTERCEPT_PROCESS_SIGNALS=true
 
 ## io.Manager Admin UI
 ADMIN_UI_PORT=3000
