--- a/auth-custom-advanced/io-cd-login/package.json
+++ b/auth-custom-advanced/io-cd-login/package.json
@@ -6,17 +6,13 @@
   "scripts": {
     "start": "vite",
     "build": "npm run typecheck && vite build",
-    "typecheck": "tsc",
-    "preview": "vite preview",
-    "format": "prettier --cache --write .",
-    "format-check": "prettier --cache --check ."
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@interopio/desktop": "^6.14.0",
     "@okta/okta-auth-js": "^7.12.1"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^7.0.2"
   }
