--- a/auth-custom/io-cd-login/package.json
+++ b/auth-custom/io-cd-login/package.json
@@ -6,13 +6,9 @@
   "scripts": {
     "start": "vite",
     "build": "npm run typecheck && vite build",
-    "typecheck": "tsc",
-    "preview": "vite preview",
-    "format": "prettier --cache --write .",
-    "format-check": "prettier --cache --check ."
+    "typecheck": "tsc"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^7.0.2"
   }
