--- a/auth-okta/io-manager-admin-ui/package.json
+++ b/auth-okta/io-manager-admin-ui/package.json
@@ -11,17 +11,13 @@
   "scripts": {
     "start": "vite",
     "build": "npm run typecheck && vite build",
-    "typecheck": "tsc",
-    "preview": "vite preview",
-    "format": "prettier --cache --write .",
-    "format-check": "prettier --cache --check ."
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.6.0",
-    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
-    "vite": "^7.0.0"
+    "vite": "^7.0.2"
   }
 }
