format and unify gitignore

--- a/.maintenance/package.json
+++ b/.maintenance/package.json
@@ -9,8 +9,8 @@
     "npm:update": "node scripts/update.js",
     "test": "node ./scripts/test-examples.js",
     "build": "node ./scripts/build.js",
-    "format": "prettier --cache --write ..",
-    "format-check": "prettier --cache --check .",
+    "format": "prettier --single-quote --trailing-comma es5 --cache --write ..",
+    "format-check": "prettier --single-quote --trailing-comma es5 --cache --check .",
     "exec": "node ./scripts/exec.js",
     "npm:outdated": "node ./scripts/outdated.js",
     "npm:audit": "node scripts/audit.js",
