--- a/docker-images/docker-compose.yml
+++ b/docker-images/docker-compose.yml
@@ -7,14 +7,14 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
     restart: unless-stopped
     ports:
-      - "${MONGODB_PORT}:27017"
+      - '${MONGODB_PORT}:27017'
     networks:
       manager-network:
         aliases:
           - db
     volumes:
-      - "db-config:/data/configdb"
-      - "db-data:/data/db"
+      - 'db-config:/data/configdb'
+      - 'db-data:/data/db'
   server:
     image: ghcr.io/interopio/manager:latest
     environment:
@@ -27,7 +27,7 @@ services:
       - API_AUTH_METHOD=${API_AUTH_METHOD}
     restart: unless-stopped
     ports:
-      - "${API_PORT}:${API_PORT}"
+      - '${API_PORT}:${API_PORT}'
     networks:
       manager-network:
         aliases:
@@ -41,7 +41,7 @@ services:
       - REACT_APP_AUTH_USER=${REACT_APP_AUTH_USER}
     restart: unless-stopped
     ports:
-      - "${ADMIN_UI_PORT}:80"
+      - '${ADMIN_UI_PORT}:80'
 volumes:
   db-config:
   db-data:
