--- a/manager-template/1-basic/kubernetes/_4_server.yaml
+++ b/manager-template/1-basic/kubernetes/_4_server.yaml
@@ -38,9 +38,9 @@ spec:
                 name: server-config
           resources:
             limits:
-              memory: "512Mi"
+              memory: '512Mi'
             requests:
-              memory: "256Mi"
+              memory: '256Mi'
           volumeMounts:
             - name: server-logs-volume
               mountPath: /home/node/app/logs
