--- a/manager-template/1-basic/kubernetes/_5_admin.yaml
+++ b/manager-template/1-basic/kubernetes/_5_admin.yaml
@@ -34,6 +34,6 @@ spec:
                 name: ui-config
           resources:
             limits:
-              memory: "128Mi"
+              memory: '128Mi'
             requests:
-              memory: "64Mi"
+              memory: '64Mi'
