--- a/auth-custom-advanced/io-cd-login/package.json
+++ b/auth-custom-advanced/io-cd-login/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "build": "npm run typecheck && vite build",
-    "typecheck": "tsc"
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "@interopio/desktop": "^6.14.0",
