--- a/.maintenance/package.json
+++ b/.maintenance/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maintenance",
+  "name": "example-maintenance-scripts",
   "version": "0.0.1",
   "type": "module",
   "private": true,
