--- a/auth-custom-advanced/io-manager-admin-ui/package.json
+++ b/auth-custom-advanced/io-manager-admin-ui/package.json
@@ -11,8 +11,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "npm run typecheck && vite build",
-    "typecheck": "tsc"
+    "build": "tsc && vite build"
   },
   "devDependencies": {
     "@types/react": "^18.3.23",
